<resources>
    <string name="app_name">ChatApp</string>

    <!--  로그인, 회원가입 화면  -->
    <string name="id_hint">ID</string>
    <string name="pw_hint">PW</string>
    <string name="login_text">로그인</string>
    <string name="signup_text">회원가입</string>
    <string name="nickname_hint">닉네임</string>


    <!--  홈화면  -->
    <string name="person">Person</string>
    <string name="bubble">bubble</string>
    <string name="add_friend_title">닉네임으로 추가</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_friend_hint">친구 닉네임</string>
    <string name="add_friend_btn">친구추가</string>



    <!--  fcm 서버키  -->
    <string name="default_notification_channel_id">AAAAyr__4iE:APA91bFPKaC_7bnepGs07z8VBHFyaB40ilcbZF53ID1kLaZDtz1pmjfcZtPRSY3GI0lRrredKGfKJN1w4VckpwS6IND3QqONch4Hu8Nwnffe2c_utPI6fDVq2EM8JsdDHsHN50bzD3yP</string>


</resources>